--- a/css/custom.css
+++ b/css/custom.css
@@ -189,7 +189,7 @@
 
     .services-grid .feature-box {
 	margin-bottom: 20px;
-        padding: 1rem;
+        padding: 1rem 1rem 50px 1rem;
         background-size: 0;
         border: 1px solid rgba(255,255,255,0.1);
     }
