--- a/css/custom.css
+++ b/css/custom.css
@@ -229,6 +229,14 @@
     .services-grid .feature-box .fbox-icon i { background-color: #FFF; }
 }
 
+.yoga-video .play-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -40px;
+    margin-left: -40px;
+}
+
 .play-icon {
 	transition: transform .3s ease;
 }
